2003-03-02  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-services-dispatchers-method.adb:
	Put with clauses in alphabetical order.
	Update copyright notice.	

	* aws-services-dispatchers-method.ads:
	Put with clauses in alphabetical order.
	Minor reformatting.
	Update copyright notice.	

	* aws-services-dispatchers-uri.adb:
	Put with clauses in alphabetical order.
	Update copyright notice.	

	* aws-services-dispatchers-uri.ads:
	Minor reformatting.
	Update copyright notice.

	* aws-communication-client.ads:
	Minor reformatting.
	Update copyright notice.	

	* aws-communication-server.adb:
	Minor reformatting.
	Add some comments.
	Update copyright notice.	

	* aws-communication-server.ads:
	Minor reformatting.
	Update copyright notice.	

	* aws-communication.adb:
	Add routine header box.
	Update copyright notice.

	* aws-communication.ads:
	(Null_Parameter_Set): Move definition to the private part
	 (deferred constant).
	Add comments.
	Minor reformatting.
	Update copyright notice.

2003-03-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client.adb:
	(Open_Send_Common_Header): Rename declaration Sock is changed
	 to the rename of just Socket access, becouse rename of Socket.all
	 would become invalid in case of reconnect and recreate the socket.
	 It is fixes the rarely appearing bug in the strm2.adb regression
	 test.

2003-03-01  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-headers-values.adb:
	(Exist_Unnamed_Value): Rename to Unnamed_Value_Exists.
	Add missing routine header box.
	
	* aws-headers-values.ads:
	(Exist_Unnamed_Value): Rename to Unnamed_Value_Exists.
	Update copyright notice.

2003-03-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-headers-values.ads, aws-headers-values.adb:
	(Exist_Unnamed_Value): New routine.

2003-02-28  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-ldap-client.ads:
	(Search): Fix comment.

2003-02-28  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-ldap-client.adb:
	(Get_Error): New function.